# 2dIsing

./: CMakeLists.txt  README.md
src/: CMakeLists.txt  Ising_2d.cpp  Ising_2d.hpp
test/: CMakeLists.txt  Test.cpp
